--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -183,12 +183,14 @@ ul.navbar-nav{
     width: 100%;
     transition: height 0.3s;
 
-    &.image-expanded{
-      height: 100vh;
-    }
-
     @media(max-width: $site-width-small){
       object-fit: cover;    
+    }
+
+    &.image-expanded{
+      height: 100vh;
+      max-width: 100vw;
+      object-fit: none;
     }
   }
 }
